2005-12-19  Michael Scharkow <michael@underused.org>
	* Fixed bug #1915: trigger 404 with bogus aliases

2005-12-19  Sebastian Kurfuerst  <sebastian@garbahe-group.de>

	* New feature #1078: make javascript warning/confirmation popups configurable
	* Fixed bug #1578: Radio button validation does not work if there is only one radio button
	* Fixed bug #1906: first part only implements override.* for arbitary adminPanel options - relates to #1518

2005-12-19  Michael Stucki  <michael@typo3.org>

	* Added support for objects in conditions. Use it like this: [globalString = TSFE:fe_user|user|username = myname]

2005-12-19  Kasper Skaarhoj  <kasper2005@typo3.com>

	* Change logout-button label to "Exit" when in SwitchBackUser mode.
	* Fixed a htmlspecialchars() thing in TCEforms.

2005-12-18  Michael Stucki  <michael@typo3.org>

	* Cleanup: Changed all occurences of "depreciated" => "deprecated"

2005-12-17  Kasper Skaarhoj  <kasper2005@typo3.com>

	* Added reference index table and class. See mail sent to Dev-list

2005-12-16  Robert Lemke  <robert@typo3.org>

	* Fixed a bug in t3lib_beFunc::getRecordWSOL - it now makes sure that uid, pid and t3ver_swapmode are selected internally if they are not specified in $fields

2005-12-13  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Support of file_get_contents() in t3lib_div::getURL()
	* Check result of fwrite() in t3lib_div::writeFile()

2005-12-15  Michael Stucki  <michael@typo3.org>

	* Added a deleted field to pages_language_overlay
	* Changed alignment for some checkboxes in the TS debugger of the admin panel (better to read)
	* Fixed Gremlin #381: "Page is being generated" should belocalized. The message can be changed by setting "config.message_page_is_being_generated" in the TS template. See TSref for details.

2005-12-15  Kasper Skaarhoj  <kasper2005@typo3.com>

	* Fixed a small SQL-related bug in Dmitris workspace related implementations

2005-12-14  Sebastian Kurfuerst  <sebastian@garbage-group.de>
